ML_Pipeline/ml-inference-system/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-inference-service
  labels:
    app: ml-inference
spec:
  selector:
    app: ml-inference
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
